<resources>
    <string name="app_name">Contact</string>
    <string name="work_app">Work</string>
    <string name="add">Add</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="add_work">Add Work</string>
    <string name="edit_work">Edit Work</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="fail">Fail</string>
    <string name="Edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="keyword">Keyword</string>
</resources>
